kube/prod/prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flinthillsparanormal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flinthillsparanormal
  template:
    metadata:
      labels:
        app: flinthillsparanormal
    spec:
      containers:
        - image: ghcr.io/fourfridays/flinthillsparanormal.com:latest
          name: flinthillsparanormal
          resources:
            requests:
              ephemeral-storage: "2Gi"
              memory: "256Mi"
            limits:
              ephemeral-storage: "4Gi"
              memory: "512Mi"
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: flinthillsparanormal
  labels:
    app: flinthillsparanormal
spec:
  selector:
    app: flinthillsparanormal
  ports:
    - port: 8088
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flinthillsparanormal
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: flinthillsparanormal.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flinthillsparanormal
                port:
                  number: 8088
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flinthillsparanormal-tls
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`flinthillsparanormal.com`)
      middlewares:
        - name: flinthillsparanormal-gzip-compress
      services:
        - name: flinthillsparanormal
          port: 8088
  tls: # This route uses TLS
    secretName: flinthillsparanormal-tls # Uses our certificate resolver to get a certificate automatically!
---
# Enable gzip compression
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: flinthillsparanormal-gzip-compress
spec:
  compress: {}
